# g2o

./: WEI.md
g2o/examples/: CMakeLists.txt
g2o/examples/ba/: ba_demo.cpp
g2o/examples/bal/: bal_example.cpp
g2o/examples/data_fitting/: circle_fit.cpp  curve_fit.cpp
g2o/examples/demo/: CMakeLists.txt  demo.cpp  demo_static.cpp  demo_static.yaml  types_demo.cpp  types_demo.hpp  types_static.cpp  types_static.hpp
g2o/examples/demo/lib/: CMakeLists.txt  json_io.cpp  json_io.hpp
g2o/examples/icp/: gicp_demo.cpp
g2o/examples/sba/: sba_demo.cpp
g2o/examples/simple_optimize/: simple_optimize.cpp
g2o/types/icp/: types_icp.cpp  types_icp.h
g2o/types/sba/: types_six_dof_expmap.cpp  types_six_dof_expmap.h
